[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rbnn_gravity"
version = "0.0.1"
authors = [
  { name="Christine Allen-Blanchette", email="ca15@princeton.edu" },
  { name="Harsh Sharma", email="hasharma@ucsd.edu " }
]
description = "A package to predict rigid body dynamics in the presence of gravity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "torch"
]

[project.urls]
"Homepage" = "https://github.com/CAB-Lab-Princeton/rbnn_gravity"